<resources>
    <string name="app_name">Laudio</string>
    <string name="main_botonhasi">Hasi</string>
    <string name="main_botonatera">Atera</string>
    <string name="title_activity_level_chooser">Map</string>
    <string name="inicio">Laudio</string>
    <string name="l_ikastola">Laudioko ikastola</string>
    <string name="l_petrieliza">Done Petri Eliza</string>
    <string name="l_tren">Tren geltokia</string>
    <string name="l_parkea">Lamuzako parkea</string>
    <string name="l_dorretxea">Ugarteko Dorretxea</string>
    <string name="l_jauregia">Katuxa Jauregia</string>
    <string name="l_lantegia">Zeramikako lantegia</string>
    <string name="l_cruz">Santa Cruz</string>
    <string name="textoIni">Ea asmatzen dusuen argazki honetan agertzen den zatia zein eraikinarekin bat</string>
    <string name="textoMal">Ui! Kontuz! Ez diozue erantzun zuzenari eman! Saiatu berriro</string>
    <string name="textoBien">Oso ondo! Oso azkarrak zarete gero!</string>
    <string name="respMal1">SUHILTZAILEEN EGOITZA</string>
    <string name="respMal2">INSTITUKO EGOITZA</string>
    <string name="respBien">LAMUZAKO ELIZA</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="TrenGeltokia1">Oso ikerlari onak zarete! Lehenengo ondarea arin aurkitu duzue… ea hurrengoarekin zer gertatzen den… Horretarako, puzzle hau ondo osatu beharko duzue eta hurrengo ondarera bideratuko zaituztete.</string>
    <string name="TrenGeltokia2">Zein ondo egiten duzue!! Benetan apartekoak zaretela!!</string>
    <string name="TrenGeltokia3_galdera"> Ea ba nire ikerlari sutsuak… esango didazue zein eraikin mota dirudien? Ea asmatzen duzuen… animo!</string>
    <string name="TrenGeltokia3_aukera1">Jauregiar dorretxea</string>
    <string name="TrenGeltokia3_aukera2">Gaztelua</string>
    <string name="TrenGeltokia3_aukera3">Kartzela</string>
    <string name="TrenGeltokia3_zuzena">Oso ondo lagunak!! Segi horrela!!</string>
    <string name="TrenGeltokia3_okerra">Uff!! Gutxigaitik ez duzue erantzun</string>
    <string name="TrenGeltokia4_info">Tren geltoki hau 1965ean estreinatu zen. Bizkaian eta Araban, 20. eta 30. hamarkadetan eraikitako tren geltokien artean salbuespena dugu hau, herriko inspirazioko neoeuskal arkitekturaren kontrako eraikina delako eta Jauregi dorretxea islatzen duelako.</string>
    <string name="mapbox_key">pk.eyJ1IjoiZGV2LW1hcmNrIiwiYSI6ImNqcHMwM3pieDAwYWQ0OG8xNjV1b3VrNXgifQ.kGQTu-vJ6Wtlfzc5GWghhA</string>
    <string name="style_url">mapbox://styles/dev-marck/cjps04qzd2r4k2sjjpnzyu0dx</string>
    <string name="main_reiniciar">berrabiarazi</string>
    <string name="h_last_update">Ultima actualizacion: %s</string>
    <string name="arantza14_1">so fin ari zarete orain arte...baina ea hurrengo pista asmatzeko adorerik duzuen...; Begiratu arretaz argazkiak eta adi hurrengoari...</string>
    <string name="arantza14_pista">“Elementu hauek herriko lantegi batean egiten ziren. Gaur egun ez da
lantegia, baina bere garaian erabilitako tximinia handi bat zutik jarraitzen du.
Lantegi honetara heltzeko 2. ondarea erabili beharko duzue...arin ibili, bestela
aurkitzeko aukera galduko duzue”</string>
    <string name="zeramika1_trena">Trena!!</string>
    <string name="juFin">Argazkia  sakatuz  gero,  GPSa  aktibatuko  zaizue  eta  bertan adieraziko zaizue ze bide hartu beharko duzuen 1. ondarera heltzeko.</string>
    <string name="jar">JARRAITU</string>
    <string name="respMal1_p2">EGURREZ</string>
    <string name="respMal2_p2">BUZTINEZ</string>
    <string name="respBien_p2">BURDINEZ</string>
    <string name="pregunta2">“Eliz ataria zerez eginda dago?”</string>
    <string name="juego2_Txomin">Beno, 1. ondarearen aurrean zaudete, Lamuzako Elizaren aurrean hain zuzen ere. Baina eliza honek badu ezaugarri berezi bat… </string>
    <string name="textoMal2">Ai ene! Erantzun okerra sakatu duzue! Saiatu berriro ere!</string>
    <string name="textoBien2">Primeran! Ikasle apartak zarete!</string>
    <string name="inicioPuzle">Oso  ikerlari  onak  zarete!  Lehenengo  ondarea  arin  aurkitu duzue… ea hurrengoarekin zer gertatzen den… </string>
    <string name="textoPuzle">Puzzle hau ondo osatu beharko duzue eta hurrengo ondarera bideratuko zaituztete</string>
    <string name="txomin13">
        Oraingo honetan urrun joan gara gero! Trena eta guzti hartu
        behar! Esperientzia polita, ezta?;Ea ba, jarrai dezagun ikerketa honekin.;
        Oraingo honetan hizki zopa bat agertuko zaizue froga moduan, eta nik esango
        dizkizuedan hitzak aurkitu beharko dituzue.; Prest? Ba adi egon eta aurrera!
        Hitzak hauek dira:
    </string>
    <string name="arantza15">Aurrera neska-mutilak! Froga ondo gainditu duzue!</string>
    <string name="txomin14">
        Lantegi hau Laudioko Urkijo Markesak sortu zuen 1905ean.
        Bertan, urte askotan zehar, teilak, adreilu erregogorrak eta zeramika produktuak
        egiten ziren. Bere garaiko tximinia mantentzen da gaur egun.
    </string>
    <string name="txomin15">
        Egia esan behar badut, ez nuen espero honaino heldu behar
        zinetenik. Oso ikerlari onak zarete eta ikusten da azkarrak zaretela oso. Jarrai
        dezagun ba frogak aurkezten eta gainditzen!
    </string>
    <string name="txomin16">
        Oraingo honetan armarri bat agertuko zaigu;
        ... uooohh!!; badirudi ondare honetako
        jendea garrantzitsua izan behar zela...
    </string>
    <string name="tituloJ">Zuhaitzak Eta Euren Plakak Bikoteka Jartzeko</string>
    <string name="tituloL">Lamuza Parkea</string>
    <string name="repetir">Errepikatu</string>
    <string name="seguir">Jarraitu</string>
    <string name="lamuza_parkea_ingurua">Lamuza Parkea Ingurua</string>
    <string name="tituloF">Iturri Bereziak</string>
    <string name="felicitacion">Zorionak!, Jokoa Bukatu Duzue</string>
    <string name="urmaela">Urmaela</string>
    <string name="sakatu">SAKATU</string>
    <string name="skate">SKATE</string>
    <string name="zubia">ZUBIA</string>
    <string name="gudariak">GUDARIAK</string>



</resources>
