<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Juego2"
    android:background="@drawable/background_img_piedra">

    <!-- 3 BOTONES + TEXTOS -->
    <ImageView
        android:id="@+id/bot1_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_btn22" />

    <TextView
        android:id="@+id/text1_p2"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/respMal1_p2"
        android:textAlignment="center"
        android:textColor="@color/amarillo0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bot1_p2"
        app:layout_constraintEnd_toEndOf="@+id/bot1_p2"
        app:layout_constraintStart_toStartOf="@+id/bot1_p2"
        app:layout_constraintTop_toTopOf="@+id/bot1_p2"
        app:layout_constraintVertical_bias="0.35000002" />

    <ImageView
        android:id="@+id/bot2_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bot1_p2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_btn22" />

    <TextView
        android:id="@+id/text2_p2"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/respBien_p2"
        android:textAlignment="center"
        android:textColor="@color/amarillo0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bot2_p2"
        app:layout_constraintEnd_toEndOf="@+id/bot2_p2"
        app:layout_constraintStart_toStartOf="@+id/bot2_p2"
        app:layout_constraintTop_toTopOf="@+id/bot2_p2"
        app:layout_constraintVertical_bias="0.36" />

    <ImageView
        android:id="@+id/bot3_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bot2_p2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_btn22" />

    <TextView
        android:id="@+id/text3_p2"
        android:layout_width="179dp"
        android:layout_height="28dp"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/respMal2_p2"
        android:textAlignment="center"
        android:textColor="@color/amarillo0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bot3_p2"
        app:layout_constraintEnd_toEndOf="@+id/bot3_p2"
        app:layout_constraintStart_toStartOf="@+id/bot3_p2"
        app:layout_constraintTop_toTopOf="@+id/bot3_p2"
        app:layout_constraintVertical_bias="0.36" />


    <!-- TXOMIN Y BOCATA + TEXTO -->


    <ImageView
        android:id="@+id/txominJuego2"
        android:layout_width="185dp"
        android:layout_height="146dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/txomin" />

    <ImageView
        android:id="@+id/bocataJuego2"
        android:layout_width="304dp"
        android:layout_height="187dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_bocatatx" />

    <TextView
        android:id="@+id/textoJuego2"
        android:layout_width="210dp"
        android:layout_height="130dp"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/juego2_Txomin"
        android:textAlignment="center"
        android:textColor="@color/verde4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bocataJuego2"
        app:layout_constraintEnd_toEndOf="@+id/bocataJuego2"
        app:layout_constraintStart_toStartOf="@+id/bocataJuego2"
        app:layout_constraintTop_toTopOf="@+id/bocataJuego2"
        app:layout_constraintVertical_bias="0.58000004" />

    <TextView
        android:id="@+id/juego2_pregunta"
        android:layout_width="367dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/pregunta2"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot3_p2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>